--- a/pages/services_page/services.html
+++ b/pages/services_page/services.html
@@ -14,6 +14,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
+<script>
+    function scrollToTop() {
+        window.scrollTo(0, 0)
+    }
+
+    function functionVisible(id) {
+        $(`#${id}`).show(500);
+
+    }
+
+    function functionHide(id) {
+        $(`#${id}`).hide(500);
+    }
+</script>
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary customNavbar">
@@ -105,12 +119,12 @@
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton1"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        Filter
+                        Sort
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">By Date</a></li>
+                        <li><a class="dropdown-item" href="#">By Price</a></li>
+                        <li><a class="dropdown-item" href="#">By Rating</a></li>
                     </ul>
                 </div>
             </div>
@@ -120,77 +134,116 @@
     <div class="container servicesBody">
         <h3>Latest Products</h3>
         <div class="row gap-1 mt-4 d-flex align-items-center justify-content-between">
-            <div class="card col-md-3" style="width: 20rem;">
-                <img src="https://png.pngtree.com/png-vector/20230903/ourmid/pngtree-a-bowl-of-almond-nuts-png-image_9947827.png"
-                    class="card-img-top" alt="...">
+            <div class="card col-md-3" style="width: 20rem; height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="https://png.pngtree.com/png-vector/20230903/ourmid/pngtree-a-bowl-of-almond-nuts-png-image_9947827.png"
+                        class="card-img-top" alt="...">
+                </div>
                 <div class="card-body">
-                    <h5 class="card-title">Almound</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    <h5 class="card-title">Almond</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the
                         card's content.</p>
                     <p>1 Kg : Rs. 4000</p>
                 </div>
 
 
-                <div class="card-body">
-                    <button class="btn viewProdsButton ">Add To Cart</button>
-                    <button class="btn viewProdsButton">View More</button>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover=" functionVisible('viewMoreText1')"
+                        onmouseleave="functionHide('viewMoreText1')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText1" style="display: none;"> View More</span>
+                        </i></button>
 
                 </div>
             </div>
-            <div class="card col-md-3" style="width: 20rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+            <div class="card col-md-3" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="https://static.vecteezy.com/system/resources/thumbnails/027/857/486/small/bowl-of-pistachios-on-isolated-background-healthy-and-vegan-concept-created-with-generative-ai-technology-png.png"
+                        class="card-img-top" alt="...">
                 </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                </ul>
                 <div class="card-body">
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
+                    <h5 class="card-title">Pistachio</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the
+                        card's content.</p>
+                    <p>1 Kg : Rs. 5000</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton">
+                        Add To Cart <i class=" bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover=" functionVisible('viewMoreText2')"
+                        onmouseleave="functionHide('viewMoreText2')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText2" style="display: none;"> View More</span>
+                        </i></button>
+
                 </div>
             </div>
-            <div class="card col-md-3" style="width: 20rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+            <div class="card col-md-3" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="https://static.vecteezy.com/system/resources/thumbnails/050/478/326/small/fresh-hazelnuts-in-a-wooden-bowl-ready-for-cooking-png.png"
+                        class="card-img-top" alt="...">
                 </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                </ul>
                 <div class="card-body">
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
+                    <h5 class="card-title">Hazelnut</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the
+                        card's content.</p>
+                    <p>1 Kg : Rs. 7000</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover="functionVisible('viewMoreText3')"
+                        onmouseleave="functionHide('viewMoreText3')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText3" style="display: none;"> View More</span>
+                        </i> </button>
+
                 </div>
             </div>
-            <div class="card col-md-3" style="width: 20rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+            <div class="card col-md-3" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="../../assets/images/download.png" class="card-img-top" alt="...">
                 </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                </ul>
                 <div class="card-body">
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
+
+                    <h5 class="card-title">Walnut</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the
+                        card's content.</p>
+                    <p>1 Kg : Rs. 6000</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart3"></i></button>
+                    <button class="btn viewProdsButton" onmouseover="functionVisible('viewMoreText4')"
+                        onmouseleave="functionHide('viewMoreText4')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText4" style="display: none;"> View More</span>
+                        </i> </button>
+
+
+
+
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="footerContainer">
+        <footer class="py-3 mt-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Services</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About Us</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact Us</a></li>
+            </ul>
+            <p class="text-center text-muted">© 2024 NutHut, Inc</p>
+        </footer>
+    </div>
+    <div class="backToTopButton">
+        <button onclick="scrollToTop('abc')" class=" btnToScrollTop"><i class="bi bi-arrow-up-circle"></i></button>
+    </div>
 </body>
 
 </html>
