--- a/pages/contact_page/contact.html
+++ b/pages/contact_page/contact.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NutHut - Contact</title>
+    <link rel="icon" type="image/x-icon" href="../../assets/images/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" i></script>
     <link href="../../styles/style.css" rel="stylesheet" />
-
+    <link href="../../styles/contactStyles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -44,6 +47,112 @@
             </div>
         </div>
     </nav>
+
+
+    <div class="container mt-5">
+        <h3>Let's Get Connected 😍</h3>
+
+        <div class="row contactContainer">
+            <div class="col-md-8">
+                <h5> Contact Info</h5>
+
+                <form class="mt-2">
+                    <div class="row">
+                        <div class="col-md-6">
+
+                            <label for="validationDefault" class="form-label">Name</label>
+
+                            <input type="text" id="validationDefault01" class="form-control"
+                                placeholder="Enter Your Name" required>
+
+                        </div>
+                        <div class="col-md-6">
+                            <label for="validationDefault02" class="form-label"> District</label>
+
+                            <select class="form-select" id="validationDefault02" required>
+                                <option >Select Your District</option>
+                                <option>Kandy</option>
+
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row mt-2">
+                        <div class="col-md-6">
+
+                            <label for="emailField" class="form-label"> Email</label>
+
+                            <div class="input-group mb-2 ">
+                                <div class="input-group-prepend ">
+                                    <div class="input-group-text emailPrefixIcon">
+
+                                        <i class="bi bi-envelope"></i>
+
+                                    </div>
+                                </div>
+                                <input type="email" class="form-control" id="emailField" placeholder="Email">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row mt-1">
+                        <div class="col-md-6">
+                            <label for="messageField"> Message </label>
+
+                            <textarea class="form-control" id="messageField" rows="2" maxlength="200"></textarea>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-2">
+                            <button class="btn-btn-primary form-control submit" type="submit"> Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="col-md-4">
+                    <img src="../../assets/images/logo.png" alt="logoImage" class="imgLogo" />
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="container addressContainer">
+        <div class="row mt-4 ">
+            <div class="col-md-6">
+                <ul class=" row gap-1 d flex iconicon" type="none">
+                    <li class="icon-item mt-1"><i class="addressIcon bi bi-shop"></i>No.41 Lane,Hellana,
+                        Colombo 10.</li>
+                    <li class="icon-item mt-1"><i class="addressIcon bi bi-telephone"></i>011-255-5897</li>
+                    <li class="icon-item mt-2"><i class="addressIcon bi bi-envelope-at"></i>info@nuthut.lk</li>
+
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <div class=" gap-4 d-flex align-items-center justify-content-center">
+                    <i class="bi bi-whatsapp h2"></i>
+                    <i class="bi bi-facebook h2"></i>
+                    <i class="bi bi-instagram h2"></i>
+                    <i class="bi bi-tiktok h2"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footerContainer">
+        <footer class="py-3 mt-2">
+            <ul class="nav justify-content-center border-bottom pb-4 mb-1">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Services</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About Us</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact Us</a></li>
+            </ul>
+            <p class="text-center text-muted">© 2024 NutHut, Inc</p>
+        </footer>
+    </div>
+
 </body>
 
 </html>
