--- a/pages/services_page/services.html
+++ b/pages/services_page/services.html
@@ -75,24 +75,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../../assets/images/nutShop.jpg" class="d-block w-100" alt="...">
+                    <img src="../../assets/images/nutShop.jpg" class="d-block w-100" alt="nutShop image">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Nuts</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <p>Elevate your palate with the finest Nuts.</p>
                     </div>
                 </div>
                 <div class="carousel-item carousel">
-                    <img src="../../assets/images/nutShop2.jpg" class="d-block w-100" alt="...">
+                    <img src="../../assets/images/nutShop2.jpg" class="d-block w-100" alt="nutShop2 Image">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Seeds</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <p>Good seeds,Happy Hearts.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../../assets/images/nutShop3.jpg" class="d-block w-100" alt="...">
+                    <img src="../../assets/images/nutShop3.jpg" class="d-block w-100" alt="nutShop3 Image">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Berries</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <p>Life is sweet when you have berries! ...</p>
                     </div>
                 </div>
 
@@ -132,18 +132,18 @@
     </div>
     <hr class="hrStyle" />
     <div class="container servicesBody">
-        <h3>Latest Products</h3>
+        <h3>Latest Products</h3> <br>
+        <h4> Nuts</h4>
         <div class="row gap-1 mt-4 d-flex align-items-center justify-content-between">
             <div class="card col-md-3" style="width: 20rem; height: 35rem;">
                 <div class="imgDiv d-flex align-items-center justify-content-center">
                     <img src="https://png.pngtree.com/png-vector/20230903/ourmid/pngtree-a-bowl-of-almond-nuts-png-image_9947827.png"
-                        class="card-img-top" alt="...">
+                        class="card-img-top" alt="Almond Image">
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Almond</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
+                    <p class="card-text">Almonds are high in antioxidants, vitamin E, protein, and fiber
+                    </p>
                     <p>1 Kg : Rs. 4000</p>
                 </div>
 
@@ -165,9 +165,8 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Pistachio</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
+                    <p class="card-text">Pistachios are high in protein, fiber, and antioxidants
+                        .</p>
                     <p>1 Kg : Rs. 5000</p>
                 </div>
                 <div class="card-body d-flex justify-content-between">
@@ -184,13 +183,13 @@
             <div class="card col-md-3" style="width: 20rem;height: 35rem;">
                 <div class="imgDiv d-flex align-items-center justify-content-center">
                     <img src="https://static.vecteezy.com/system/resources/thumbnails/050/478/326/small/fresh-hazelnuts-in-a-wooden-bowl-ready-for-cooking-png.png"
-                        class="card-img-top" alt="...">
+                        class="card-img-top" alt="Hazelnut Image">
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Hazelnut</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
+                    <p class="card-text">Hazelnuts are a contains vitamins, manganese
+                        and copper
+                    </p>
                     <p>1 Kg : Rs. 7000</p>
                 </div>
                 <div class="card-body d-flex justify-content-between">
@@ -205,14 +204,14 @@
             </div>
             <div class="card col-md-3" style="width: 20rem;height: 35rem;">
                 <div class="imgDiv d-flex align-items-center justify-content-center">
-                    <img src="../../assets/images/download.png" class="card-img-top" alt="...">
+                    <img src="../../assets/images/download.png" class="card-img-top" alt="Walnut Image">
                 </div>
                 <div class="card-body">
 
                     <h5 class="card-title">Walnut</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
+                    <p class="card-text">Walnuts are containing omega-3, antioxidants,
+                        and other compounds.
+                    </p>
                     <p>1 Kg : Rs. 6000</p>
                 </div>
                 <div class="card-body d-flex justify-content-between">
@@ -230,6 +229,196 @@
             </div>
         </div>
     </div>
+
+
+
+    <div class="container servicesBody">
+        <h4> Seeds</h4>
+        <div class="row gap-1 mt-4 d-flex align-items-center justify-content-between">
+            <div class="card col-md-2" style="width: 20rem; height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="../../assets/images/pumpkin seeds.png" class="card-img-top" alt="Pumpkinseeds Image">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Pumpkin Seeds</h5>
+                    <p class="card-text">Pumpkin seeds are contains antioxidants, magnesium, zinc
+                    </p>
+                    <p>1 Kg : Rs. 3500</p>
+                </div>
+
+
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover=" functionVisible('viewMoreText5')"
+                        onmouseleave="functionHide('viewMoreText5')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText5" style="display: none;"> View More</span>
+                        </i></button>
+
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="../../assets/images/flax seed.png" class="card-img-top" alt="Flaxseeds Image">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Flax seeds</h5>
+                    <p class="card-text">Flax seeds contains thiamine (vitamin B1), copper, molybdenum
+                    </p>
+                    <p>1 Kg : Rs. 4800</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton">
+                        Add To Cart <i class=" bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover=" functionVisible('viewMoreText6')"
+                        onmouseleave="functionHide('viewMoreText6')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText6" style="display: none;"> View More</span>
+                        </i></button>
+
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="../../assets/images/sunflower seed.png" class="card-img-top" alt="SunflowerSeed Image">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Sunflower Seeds</h5>
+                    <p class="card-text">Sunflower seeds are especially high in vitamin E and selenium.
+                    </p>
+                    <p>1 Kg : Rs. 6500</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover="functionVisible('viewMoreText7')"
+                        onmouseleave="functionHide('viewMoreText7')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText7" style="display: none;"> View More</span>
+                        </i> </button>
+
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="../../assets/images/chia seeds.webp" class="card-img-top" alt="Chia Seeds Image">
+                </div>
+                <div class="card-body">
+
+                    <h5 class="card-title">Chia Seeds</h5>
+                    <p class="card-text">Chia seeds are contains fiber, protein, omega-3 fatty acids
+                    </p>
+                    <p>1 Kg : Rs. 3000</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart3"></i></button>
+                    <button class="btn viewProdsButton" onmouseover="functionVisible('viewMoreText8')"
+                        onmouseleave="functionHide('viewMoreText8')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText8" style="display: none;"> View More</span>
+                        </i> </button>
+
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container servicesBody">
+        <h4> Berries</h4>
+        <div class="row gap-1 mt-4 d-flex align-items-center justify-content-between">
+            <div class="card col-md-2" style="width: 20rem; height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="../../assets/images/blue berries n.png" class="card-img-top" alt="Blueberries Image">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Blue Berries</h5>
+                    <p class="card-text">Blue Berries contains fiber, vitamin C, vitamin K, manganese
+                    </p>
+                    <p>1 Kg : Rs. 3000</p>
+                </div>
+
+
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover=" functionVisible('viewMoreText9')"
+                        onmouseleave="functionHide('viewMoreText9')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText9" style="display: none;"> View More</span>
+                        </i></button>
+
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+
+                    <img src="../../assets/images/black berry n.png" class="card-img-top-img" alt="Blackberries Image">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Black Berries</h5>
+                    <p class="card-text">Black Berries contains fiber, vitamin C, vitamin K, and manganese
+                        .</p>
+                    <p>1 Kg : Rs. 5000</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton">
+                        Add To Cart <i class=" bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover=" functionVisible('viewMoreText10')"
+                        onmouseleave="functionHide('viewMoreText10')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText10" style="display: none;"> View More</span>
+                        </i></button>
+
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="../../assets/images/strawberry n.png" class="card-img-top" alt="strawberries Image">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Strawberry</h5>
+                    <p class="card-text">Strawberries contains vitamin C, manganese, folate (vitamin B9)
+                    </p>
+                    <p>1 Kg : Rs. 7000</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart2"></i></button>
+                    <button class="btn viewProdsButton" onmouseover="functionVisible('viewMoreText11')"
+                        onmouseleave="functionHide('viewMoreText11')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText11" style="display: none;"> View More</span>
+                        </i> </button>
+
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 20rem;height: 35rem;">
+                <div class="imgDiv d-flex align-items-center justify-content-center">
+                    <img src="../../assets/images/cranBerries.png" class="card-img-top" alt="cranberries Image">
+                </div>
+                <div class="card-body">
+
+                    <h5 class="card-title">Cran Berries</h5>
+                    <p class="card-text">Cran Berries are contains iron, potassium and vitamin C
+                        .</p>
+                    <p>1 Kg : Rs. 3000</p>
+                </div>
+                <div class="card-body d-flex justify-content-between">
+                    <button class="btn viewProdsButton ">Add To Cart <i class="bi bi-cart3"></i></button>
+                    <button class="btn viewProdsButton" onmouseover="functionVisible('viewMoreText12')"
+                        onmouseleave="functionHide('viewMoreText12')">
+                        <i class="bi bi-arrow-right">
+                            <span id="viewMoreText12" style="display: none;"> View More</span>
+                        </i> </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="backToTopButton">
+        <button onclick="scrollToTop('abc')" class=" btnToScrollTop"><i class="bi bi-arrow-up-circle"></i></button>
+    </div>
+
     <div class="footerContainer">
         <footer class="py-3 mt-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -240,9 +429,6 @@
             </ul>
             <p class="text-center text-muted">© 2024 NutHut, Inc</p>
         </footer>
-    </div>
-    <div class="backToTopButton">
-        <button onclick="scrollToTop('abc')" class=" btnToScrollTop"><i class="bi bi-arrow-up-circle"></i></button>
     </div>
 </body>
 
