--- a/pages/contact_page/contact.html
+++ b/pages/contact_page/contact.html
@@ -70,7 +70,7 @@
                             <label for="validationDefault02" class="form-label"> District</label>
 
                             <select class="form-select" id="validationDefault02" required>
-                                <option >Select Your District</option>
+                                <option selected hidden>Select Your District</option>
                                 <option>Kandy</option>
 
                             </select>
