added batticalo option

--- a/pages/contact_page/contact.html
+++ b/pages/contact_page/contact.html
@@ -72,6 +72,7 @@
                             <select class="form-select" id="validationDefault02" required>
                                 <option selected hidden>Select Your District</option>
                                 <option>Kandy</option>
+                                <option>Batticalo</option>
 
                             </select>
                         </div>
