added option col

--- a/pages/contact_page/contact.html
+++ b/pages/contact_page/contact.html
@@ -73,6 +73,7 @@
                                 <option selected hidden>Select Your District</option>
                                 <option>Kandy</option>
                                 <option>Batticalo</option>
+                                <option>Colombo</option>
 
                             </select>
                         </div>
