--- a/pages/services_page/services.html
+++ b/pages/services_page/services.html
@@ -45,7 +45,7 @@
                 <div class="vl"></div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item customNavItem">
-                        <a class="nav-link  " aria-current="page" href="../home_page/index.html">Home</a>
+                        <a class="nav-link  " aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item customNavItem">
                         <a class="nav-link active" href="../services_page/services.html">Services</a>
@@ -221,10 +221,6 @@
                         <i class="bi bi-arrow-right">
                             <span id="viewMoreText4" style="display: none;"> View More</span>
                         </i> </button>
-
-
-
-
                 </div>
             </div>
         </div>
