--- a/pages/about_page/about.html
+++ b/pages/about_page/about.html
@@ -43,7 +43,7 @@
                 <div class="vl"></div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item customNavItem">
-                        <a class="nav-link" aria-current="page" href="../home_page/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item customNavItem">
                         <a class="nav-link" href="../services_page/services.html">Services</a>
